<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tool="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/take_photo"
        android:id="@+id/menu_take_picture"
        android:icon="@drawable/ic_content_new"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_info"
        android:showAsAction="never"
        android:title="@string/info_text"/>
    
    <item
        android:id="@+id/menu_reminder"
        android:showAsAction="never"
        android:title="@string/reminder_text"/>
    
    <item
        android:id="@+id/menu_manage_sites"
        android:showAsAction="never"
        android:title="@string/manage_sites"/>
    
     <item
        android:id="@+id/menu_guides"
        android:showAsAction="never"
        android:title="@string/guides"/>
     
    <item
        android:id="@+id/menu_donation"
        android:showAsAction="never"
        android:title="@string/donation"/>
    
    <item
        android:id="@+id/menu_logout"
        android:showAsAction="never"
        android:title="@string/logout_text"/>

</menu>