<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:orientation="horizontal" 
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:padding="0dp"
                android:src="@drawable/logo_nacc" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_coast_west" />

        </LinearLayout>

        <EditText
            android:id="@+id/email_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" 
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

        <Button
            android:id="@+id/login_button_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_button_text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" 
            android:background="@drawable/btn_default_color_light"/>
        
        <Button
            android:id="@+id/demo_button_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/demo_button_text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" 
            android:background="@drawable/btn_default_color_light"/>
    </LinearLayout>

</ScrollView>